sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:17: error: ')' expected but integer literal found.
    if(i!= && k==1){
                 ^AlgInsertionSort:20: error: illegal start of simple expression
                   }
                   ^