sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var k:Int =1
  var a:Int =0
  for(i<- 1 to getNombreValeurs()-1){
    a=getValeur(i)
    for(j<-1 to i){
      if(getValeur(i-j)>a){
   			k=i-j   
        copie(i-j,i-j+1)  
      }
      
    }
    if(i==1 && k==1){
      setValeur(k,a)
    }
    if(i!= && k==1){
      setValeur(i,a)
                   }
                   }
}